@@ -10,7 +10,7 @@
   <auto_post>no</auto_post>
   <chat max_chars="40" line_length="20"/>
   <servers>localhost:19480 localhost:19481;ssl localhost:19380 test.mekensleep.org:19380 poker.pok3d.com:19380</servers>
-  <web browser="/usr/bin/firefox">http://localhost/pokerweb/</web>
+  <web browser="/usr/bin/firefox">http://localhost/poker-web/</web>
   <sound>yes</sound>
   <tournaments custom_money="n" type="sit_n_go" sort="name"/>
   <lobby custom_money="" type="holdem" sort="name"/>
